formatação do header feita

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header class="d-flex justify-content-between bg-secondary">
+    <header class="d-flex justify-content-between bg-secondary align-items-center">
         
             <img src="imgs/logo.png" alt="Logo-netflixo" class="logo">
             <nav class="search-bar">
@@ -52,7 +52,7 @@
                     </div> <!--Fim dropdown-->
                 </div><!--Fim filter-dropdown-->
             </nav> <!--Fim search-bar-->
-            <div class="user-info">
+            <div class="user-info align-self-baseline">
                 <div class="not-logged">
                     <button class="btlogin">Login</button>
                     <button class="btsignup">Sign-up</button>
