feat: header responsivo

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <header class="d-flex justify-content-between bg-dark align-items-center">
 
     <img src="imgs/logo.png" alt="Logo-netflixo" class="logo">
+    <img src="imgs/logo-pequena.png" alt="" class="logo-pequena">
     <nav class="search-bar">
       <input type="text" name="" id="search-input" class="search-input" placeholder="Search...">
       <button id="btsearch" class="btsearch"><i class="bi bi-search"></i></button>
