feat: área de filmes dinâmica (ainda há bugs para resolver)

--- a/public/index.html
+++ b/public/index.html
@@ -152,10 +152,10 @@
         </button>
       </div>
     </section>
-    <section class="filmes container-fluid">
+    <section id="sectionFilmes" class="filmes container-fluid">
 
       <div class="row divFrase">
-        <h3>Frase aleatoria 1</h3>
+        <h3>Recomendados</h3>
       </div>
       <div class="row">
         <div class="filme col-6 col-md-4 col-lg-2">
@@ -295,7 +295,7 @@
       </div>
 
       <div class="row divFrase">
-        <h3>Frase aleatoria 2</h3>
+        <h3>Populares</h3>
       </div>
       <div class="row">
         <div class="filme col-6 col-md-4 col-lg-2">
