tudo cagado, mas consgui fazera trolha funcionar,dps arrumoo resto

--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
       <div class="row divFrase">
         <h3>Recomendados</h3>
       </div>
-      <div class="row">
+      <div id="row1" class="row">
         <div class="filme col-6 col-md-4 col-lg-2">
           <div class="conteudo">
             <h4 class="titulo">Filme 1</h4>
@@ -284,6 +284,7 @@
           </div>
         </div>
 
+        
 
 
 
@@ -297,7 +298,7 @@
       <div class="row divFrase">
         <h3>Populares</h3>
       </div>
-      <div class="row">
+      <div id="row2" class="row position-relative carousel-track">
         <div class="filme col-6 col-md-4 col-lg-2">
           <div class="conteudo">
             <h4 class="titulo">Filme 2</h4>
@@ -418,6 +419,170 @@
             <img src="imgs/filmes/banners/frieren.jpg" alt="">
           </div>
         </div>
+        <div class="filme col-6 col-md-4 col-lg-2">
+          <div class="conteudo">
+            <h4 class="titulo">Filme 2</h4>
+            <p class="sinopse">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora, eum ullam totam
+              nemo pariatur dolorum alias saepe dolore quisquam quam ab, autem iste accusamus, dolores ducimus fugiat
+              maxime porro.
+            </p>
+            <div class="botoes">
+              <ul>
+                <li><a href=""><i class="bi bi-play"></i></a></li>
+                <li><a href=""><i class="bi bi-bookmark"></i></a></li>
+                <li><a href=""><i class="bi bi-hand-thumbs-up"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="divImg">
+            <img src="imgs/filmes/banners/frieren.jpg" alt="">
+          </div>
+        </div>
+        <div class="filme col-6 col-md-4 col-lg-2">
+          <div class="conteudo">
+            <h4 class="titulo">Filme 2</h4>
+            <p class="sinopse">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora, eum ullam totam
+              nemo pariatur dolorum alias saepe dolore quisquam quam ab, autem iste accusamus, dolores ducimus fugiat
+              maxime porro.
+            </p>
+            <div class="botoes">
+              <ul>
+                <li><a href=""><i class="bi bi-play"></i></a></li>
+                <li><a href=""><i class="bi bi-bookmark"></i></a></li>
+                <li><a href=""><i class="bi bi-hand-thumbs-up"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="divImg">
+            <img src="imgs/filmes/banners/frieren.jpg" alt="">
+          </div>
+        </div>
+        <div class="filme col-6 col-md-4 col-lg-2">
+          <div class="conteudo">
+            <h4 class="titulo">Filme 2</h4>
+            <p class="sinopse">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora, eum ullam totam
+              nemo pariatur dolorum alias saepe dolore quisquam quam ab, autem iste accusamus, dolores ducimus fugiat
+              maxime porro.
+            </p>
+            <div class="botoes">
+              <ul>
+                <li><a href=""><i class="bi bi-play"></i></a></li>
+                <li><a href=""><i class="bi bi-bookmark"></i></a></li>
+                <li><a href=""><i class="bi bi-hand-thumbs-up"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="divImg">
+            <img src="imgs/filmes/banners/frieren.jpg" alt="">
+          </div>
+        </div>
+        <div class="filme col-6 col-md-4 col-lg-2">
+          <div class="conteudo">
+            <h4 class="titulo">Filme 2</h4>
+            <p class="sinopse">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora, eum ullam totam
+              nemo pariatur dolorum alias saepe dolore quisquam quam ab, autem iste accusamus, dolores ducimus fugiat
+              maxime porro.
+            </p>
+            <div class="botoes">
+              <ul>
+                <li><a href=""><i class="bi bi-play"></i></a></li>
+                <li><a href=""><i class="bi bi-bookmark"></i></a></li>
+                <li><a href=""><i class="bi bi-hand-thumbs-up"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="divImg">
+            <img src="imgs/filmes/banners/frieren.jpg" alt="">
+          </div>
+        </div>
+        <div class="filme col-6 col-md-4 col-lg-2">
+          <div class="conteudo">
+            <h4 class="titulo">Filme 2</h4>
+            <p class="sinopse">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora, eum ullam totam
+              nemo pariatur dolorum alias saepe dolore quisquam quam ab, autem iste accusamus, dolores ducimus fugiat
+              maxime porro.
+            </p>
+            <div class="botoes">
+              <ul>
+                <li><a href=""><i class="bi bi-play"></i></a></li>
+                <li><a href=""><i class="bi bi-bookmark"></i></a></li>
+                <li><a href=""><i class="bi bi-hand-thumbs-up"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="divImg">
+            <img src="imgs/filmes/banners/frieren.jpg" alt="">
+          </div>
+        </div>
+        <div class="filme col-6 col-md-4 col-lg-2">
+          <div class="conteudo">
+            <h4 class="titulo">Filme 2</h4>
+            <p class="sinopse">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora, eum ullam totam
+              nemo pariatur dolorum alias saepe dolore quisquam quam ab, autem iste accusamus, dolores ducimus fugiat
+              maxime porro.
+            </p>
+            <div class="botoes">
+              <ul>
+                <li><a href=""><i class="bi bi-play"></i></a></li>
+                <li><a href=""><i class="bi bi-bookmark"></i></a></li>
+                <li><a href=""><i class="bi bi-hand-thumbs-up"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="divImg">
+            <img src="imgs/filmes/banners/frieren.jpg" alt="">
+          </div>
+        </div>
+        <div class="filme col-6 col-md-4 col-lg-2">
+          <div class="conteudo">
+            <h4 class="titulo">Filme 2</h4>
+            <p class="sinopse">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora, eum ullam totam
+              nemo pariatur dolorum alias saepe dolore quisquam quam ab, autem iste accusamus, dolores ducimus fugiat
+              maxime porro.
+            </p>
+            <div class="botoes">
+              <ul>
+                <li><a href=""><i class="bi bi-play"></i></a></li>
+                <li><a href=""><i class="bi bi-bookmark"></i></a></li>
+                <li><a href=""><i class="bi bi-hand-thumbs-up"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="divImg">
+            <img src="imgs/filmes/banners/frieren.jpg" alt="">
+          </div>
+        </div>
+        <div class="filme col-6 col-md-4 col-lg-2">
+          <div class="conteudo">
+            <h4 class="titulo">Filme 2</h4>
+            <p class="sinopse">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque tempora, eum ullam totam
+              nemo pariatur dolorum alias saepe dolore quisquam quam ab, autem iste accusamus, dolores ducimus fugiat
+              maxime porro.
+            </p>
+            <div class="botoes">
+              <ul>
+                <li><a href=""><i class="bi bi-play"></i></a></li>
+                <li><a href=""><i class="bi bi-bookmark"></i></a></li>
+                <li><a href=""><i class="bi bi-hand-thumbs-up"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="divImg">
+            <img src="imgs/filmes/banners/frieren.jpg" alt="">
+          </div>
+        </div>
+        
+
+        <button class="btn btn-dark prev position-absolute  top-50 bts-custom-carousel"><span class="carousel-control-prev-icon" aria-hidden="true"></span></button>
+        <button class="btn btn-dark next position-absolute  top-50 bts-custom-carousel"><span class="carousel-control-next-icon" aria-hidden="true"></span></button>
       </div>
 
 
