feat: footer feito

--- a/public/index.html
+++ b/public/index.html
@@ -653,8 +653,33 @@
 
     </section>
   </main>
-  <footer>
-
+  <footer class="bg-dark mt-3">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="sobre col-12 col-md-8 ">
+          <h3>Sobre</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem, eum? Aperiam totam tempora sit id iusto accusamus non fuga voluptatibus natus. Enim cupiditate hic repellat, unde quasi commodi natus nobis at. Quia itaque ipsa provident natus inventore nam libero, reprehenderit placeat officia asperiores adipisci eaque cumque, nesciunt saepe ratione quibusdam veniam totam velit. Repellendus eius amet, similique rem harum voluptatibus.</p>
+        </div>
+        <div class="info-especificas col-12 col-md-4 ">
+          <div  class="titulos">
+            <h3>Autoria</h3>
+          </div>
+          <div class="autoria d-flex">
+            <img class="minhaImg" src="imgs/logo-pequena.png" alt="">
+            <ul>
+              <li><span class="infoTitulos">Aluno: </span><span class="infoMsm">Vítor Albuquerquer Dinelli</span></li>
+              <li><span class="infoTitulos">Curso: </span><span class="infoMsm">Ciência da Computação</span></li>
+              <li><span class="infoTitulos">Turma: </span><span class="infoMsm">Manhã</span></li>
+            </ul>
+          </div>
+          <div  class="titulos d-flex">
+            <h3>Redes sociais:</h3>
+            <span class="redesIcons"><a href="https://wa.me/5531990600927"><i class="bi bi-whatsapp"></i></a></span>
+            <span class="redesIcons"><a href="https://www.instagram.com/vitordinelli2007"><i class="bi bi-instagram"></i></a></span>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 
