html e css do detalhes pronto

--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -104,7 +104,48 @@
         </div><!--Fim-<div class="row p-o m-0">-->
       </div>
     </section>
-    <section></section>
+    <section class="epsOuFotosDoItem">
+      <h3>Episódios/Cenas marcantes</h3>
+      <div id="fotosDoItem" class="d-flex flex-wrap">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="imgs/filmes/frieren/frierenEp1.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="imgs/filmes/frieren/frierenEp2.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="imgs/filmes/frieren/frierenEp3.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="imgs/filmes/frieren/frierenEp4.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="imgs/filmes/frieren/frierenEp5.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="imgs/filmes/frieren/frierenEp6.jpg" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+      </div>
+
+    </section>
   </main>
     
       
