--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <header class="d-flex justify-content-between bg-dark align-items-center">
+  <header class="d-flex justify-content-between bg-dark align-items-center position-relative">
 
     <img src="imgs/logo.png" alt="Logo-netflixo" class="logo">
     <img src="imgs/logo-pequena.png" alt="" class="logo-pequena">
@@ -65,6 +65,19 @@
 
     </div> <!--Fim user-info-->
 
+    <aside id="sidebar-menu" class="sidebar position-absolute end-0 top-0">
+      <nav class="menu">
+        <ul>
+          <li><a href="#"><i class="bi bi-person"></i> <span>Sua conta</span></a></li>
+          <li><a href="#"><i class="bi bi-gear"></i> <span>Configurações</span></a></li>
+          <li><a href="#"><i class="bi bi-star"></i> <span>Favoritos</span></a></li>
+          <li><a href="#"><i class="bi bi-clock"></i> <span>Assistir depois</span></a></li>
+          <li><a href="#"><i class="bi bi-book"></i> <span>Histórico</span></a></li>
+          <li><a href="#"><i class="bi bi-hand-thumbs-up"> </i><span>Filmes curtidos</span></a></li>
+          <li><a id="sair-conta" href="#"><i class="bi bi-box-arrow-left"></i> <span>Sair da conta</span></a></li>
+      </ul>
+      </nav>
+    </aside>
 
   </header>
   <main>
