bt para voltar a home

--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -67,6 +67,7 @@
     <aside id="sidebar-menu" class="sidebar position-absolute end-0 top-0">
       <nav class="menu">
         <ul>
+          <li><a href="index.html"><i class="bi bi-house"></i> <span>Home</span></a></li>
           <li><a href="#"><i class="bi bi-person"></i> <span>Sua conta</span></a></li>
           <li><a href="#"><i class="bi bi-gear"></i> <span>Configurações</span></a></li>
           <li><a href="#"><i class="bi bi-star"></i> <span>Favoritos</span></a></li>
