uma parte das infos carregadas nos detalhes

--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -85,11 +85,11 @@
       <div class="conatiner-fluid">
         <div class="row p-o m-0">
           <div class="imgPrinciapal col-12 col-md-6 col-x1-4 p-0 m-0">
-            <img class="p-0 m-0" src="imgs/filmes/banners/jujutsu.jpg" alt="banner princiapal do filme">
+            <img id="banner" class="p-0 m-0" src="imgs/filmes/banners/jujutsu.jpg" alt="banner princiapal do filme">
           </div><!--Fim-<div class="imgPrinciapal col-12 col-md-6 col-x1-4 p-0 m-0">-->
           <div class="infos col-12 col-md-6 col-x1-8 p-3 pt-2">
-            <h3>Título</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, praesentium alias. Veniam dolorem autem dolor inventore odit tempore id, quod repellendus dolore molestias, minima reprehenderit nemo adipisci qui debitis. Pariatur excepturi cumque obcaecati repudiandae placeat assumenda expedita incidunt eligendi doloribus quo explicabo nesciunt earum possimus maiores voluptates officiis autem eveniet ea deserunt nam, sapiente adipisci in modi animi. Ipsum sint cupiditate, sed perspiciatis odio similique a in, aliquam laboriosam itaque nemo. Deserunt ut soluta eligendi quis labore ducimus, magnam explicabo pariatur dolorem et at vel nisi doloribus id illum reprehenderit earum suscipit, dolorum eum inventore. Commodi debitis illum inventore quidem!</p>
+            <h3 id="titulo">Título</h3>
+            <p id="sinopse">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, praesentium alias. Veniam dolorem autem dolor inventore odit tempore id, quod repellendus dolore molestias, minima reprehenderit nemo adipisci qui debitis. Pariatur excepturi cumque obcaecati repudiandae placeat assumenda expedita incidunt eligendi doloribus quo explicabo nesciunt earum possimus maiores voluptates officiis autem eveniet ea deserunt nam, sapiente adipisci in modi animi. Ipsum sint cupiditate, sed perspiciatis odio similique a in, aliquam laboriosam itaque nemo. Deserunt ut soluta eligendi quis labore ducimus, magnam explicabo pariatur dolorem et at vel nisi doloribus id illum reprehenderit earum suscipit, dolorum eum inventore. Commodi debitis illum inventore quidem!</p>
             <div class="d-flex justify-content-between flex-wrap">
               <div class="categoria d-flex">
                 <h5>Categoria: </h5>
@@ -108,7 +108,7 @@
               </div> <!--Fim-<div class="avaliacao d-flex">-->
             </div><!--Fim-<div class="d-flex justify-content-between flex-wrap">-->
             <div class="trailer">
-              <iframe
+              <iframe id="iframeTrailer"
                src="https://www.youtube.com/embed/JfVOs4VSpmA?si=6MNSqcss1swUvdPY" 
                title="YouTube video player" frameborder="0" 
                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
