info para a pagina de detalhes passada(praticamente tudo pronto, só falta alguns detalhes)

--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -119,7 +119,7 @@
       </div>
     </section>
     <section class="epsOuFotosDoItem">
-      <h3>Episódios/Cenas marcantes</h3>
+      <h3 id="h3epsOuCenas">Episódios/Cenas marcantes</h3>
       <div id="fotosDoItem" class="d-flex flex-wrap">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="imgs/filmes/frieren/frierenEp1.jpg" alt="Card image cap">
