comentando partes inúteis do html e corrigindo dados errados no array dados do app.js(diretorio de img e trailer)

--- a/public/detalhes.html
+++ b/public/detalhes.html
@@ -121,6 +121,9 @@
     <section class="epsOuFotosDoItem">
       <h3 id="h3epsOuCenas">Episódios/Cenas marcantes</h3>
       <div id="fotosDoItem" class="d-flex flex-wrap">
+        <!--Preenchido com js-->
+        <!--Versão exemplo:-->
+        <!--
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="imgs/filmes/frieren/frierenEp1.jpg" alt="Card image cap">
           <div class="card-body">
@@ -157,6 +160,7 @@
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
+        -->
       </div>
 
     </section>
