--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,9 @@
     <section class="destaques">
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
         <div class="carousel-indicators">
+          <!--Preenchido com js-->
+          <!--Versão exemplo:-->
+          <!--
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
@@ -92,15 +95,17 @@
             aria-label="Slide 3"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
             aria-label="Slide 4"></button>
+          -->
         </div>
         <div class="carousel-inner">
+          <!--Preenchido com js-->
+          <!--Versão exemplo:-->
+          <!--
           <div class="carousel-item active">
-
             <div class="carousel-img-div">
               <div class="degrade"></div>
               <img src="imgs/filmes/banners/aot.jpg" class="d-block w-100 custom-img-carousel" alt="...">
             </div>
-
             <div class="carousel-caption d-none d-md-block custom-caption">
               <h5>First slide label</h5>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error harum quis aut, similique natus sed
@@ -108,13 +113,12 @@
                 corrupti itaque deleniti.</p>
             </div>
           </div>
-          <div class="carousel-item">
 
+          <div class="carousel-item">
             <div class="carousel-img-div">
               <div class="degrade"></div>
               <img src="imgs/filmes/banners/frieren.jpg" class="d-block w-100 custom-img-carousel" alt="...">
             </div>
-
             <div class="carousel-caption d-none d-md-block custom-caption">
               <h5>Second slide label</h5>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum perspiciatis amet eveniet qui laboriosam,
@@ -122,28 +126,25 @@
                 aperiam officiis.</p>
             </div>
           </div>
-          <div class="carousel-item">
 
+          <div class="carousel-item">
             <div class="carousel-img-div">
               <div class="degrade"></div>
               <img src="imgs/filmes/banners/jujutsu.jpg" class="d-block w-100 custom-img-carousel" alt="...">
             </div>
-
             <div class="carousel-caption d-none d-md-block custom-caption">
               <h5>Third slide label</h5>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente maiores temporibus officiis minima
                 iusto, qui nisi laboriosam sint molestiae dicta non magnam eveniet debitis quidem porro, voluptas
                 quaerat amet facilis.</p>
             </div>
-
           </div>
-          <div class="carousel-item">
 
+          <div class="carousel-item">
             <div class="carousel-img-div">
               <div class="degrade"></div>
               <img src="imgs/filmes/banners/arcane.jpg" class="d-block w-100 custom-img-carousel" alt="...">
             </div>
-
             <div class="carousel-caption d-none d-md-block custom-caption">
               <h5>Forth slide label</h5>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente maiores temporibus officiis minima
@@ -152,6 +153,7 @@
             </div>
 
           </div>
+          -->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
           data-bs-slide="prev">
@@ -166,7 +168,9 @@
       </div>
     </section>
     <section id="sectionFilmes" class="filmes container-fluid">
-
+      <!--Preenchido com js-->
+      <!--Versão exemplo:-->
+      <!--
       <div class="row divFrase">
         <h3>Recomendados</h3>
       </div>
@@ -662,7 +666,7 @@
         <button id="prev2" class="btn btn-dark prev position-absolute  top-50 bts-custom-carousel"><span class="carousel-control-prev-icon" aria-hidden="true"></span></button>
         <button id="next2" class="btn btn-dark next position-absolute  top-50 bts-custom-carousel"><span class="carousel-control-next-icon" aria-hidden="true"></span></button>
       </div>
-
+      -->
 
     </section>
   </main>
